[gd_scene load_steps=7 format=3 uid="uid://4vjk881onlb1"]

[ext_resource type="Script" uid="uid://ba35hlsyfcm6k" path="res://Scripts/choose_level.gd" id="1_1tlw4"]
[ext_resource type="Texture2D" uid="uid://yq8rtoqp7yvl" path="res://Sprites/doug_doug_rosa.png" id="1_p3w3h"]
[ext_resource type="Texture2D" uid="uid://c287xer5dkn46" path="res://Sprites/lock_icon.png" id="3_m4o1t"]

[sub_resource type="Gradient" id="Gradient_1tlw4"]
colors = PackedColorArray(0, 0, 0, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_m4o1t"]
gradient = SubResource("Gradient_1tlw4")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_m4o1t"]

[node name="Level" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1tlw4")

[node name="PreviousLevel" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 100.0
offset_top = 140.0
offset_right = 150.0
offset_bottom = 220.0
text = "<"

[node name="NextLevel" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 490.0
offset_top = 140.0
offset_right = 540.0
offset_bottom = 220.0
text = ">"

[node name="LevelInfo" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Background" type="TextureRect" parent="LevelInfo"]
layout_mode = 0
offset_left = 170.0
offset_top = 30.0
offset_right = 470.0
offset_bottom = 330.0
texture = SubResource("GradientTexture1D_m4o1t")

[node name="LevelIcon" type="TextureRect" parent="LevelInfo/Background"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 45.0
offset_top = 25.0
offset_right = 255.0
offset_bottom = 125.0
texture = ExtResource("1_p3w3h")
expand_mode = 1

[node name="LevelName" type="RichTextLabel" parent="LevelInfo/Background"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 45.0
offset_top = 150.0
offset_right = 255.0
offset_bottom = 180.0
text = "1. The first level"
scroll_active = false
horizontal_alignment = 1

[node name="PlayCurrentLevel" type="Button" parent="LevelInfo/Background"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 80.0
offset_top = 196.0
offset_right = 225.0
offset_bottom = 232.0
theme_override_styles/normal = SubResource("StyleBoxFlat_m4o1t")
text = "Play"

[node name="LevelLocked" type="TextureRect" parent="LevelInfo/Background"]
unique_name_in_owner = true
layout_mode = 0
offset_right = 300.0
offset_bottom = 300.0
texture = ExtResource("3_m4o1t")
expand_mode = 1

[node name="BackButton" type="Button" parent="LevelInfo/Background"]
layout_mode = 0
offset_left = -152.0
offset_top = -8.0
offset_right = -71.0
offset_bottom = 21.0
theme_override_styles/normal = SubResource("StyleBoxFlat_m4o1t")
text = "Back"

[connection signal="pressed" from="PreviousLevel" to="." method="_on_previous_level_pressed"]
[connection signal="pressed" from="NextLevel" to="." method="_on_next_level_pressed"]
[connection signal="pressed" from="LevelInfo/Background/PlayCurrentLevel" to="." method="_on_play_current_level_pressed"]
[connection signal="pressed" from="LevelInfo/Background/BackButton" to="." method="_on_back_button_pressed"]
